...
            app:destination="@id/mockWalkFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:launchSingleTop="false" />
        <action
            android:id="@+id/action_navigation_walk_to_newRouteFragment"
            app:destination="@id/newRouteFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:launchSingleTop="false" />
        <action
            android:id="@+id/action_navigation_walk_to_navigation_routes"
            app:destination="@id/navigation_routes"
...
        android:id="@+id/memberFragment"
        android:name="com.example.team_project_team6.ui.team.MemberFragment"
        android:label="@string/title_members"
        tools:layout="@layout/fragment_members"/>

    <fragment
        android:id="@+id/proposedWalkFragment"
        android:name="com.example.team_project_team6.ui.team.ProposedWalkFragment"
        android:label="@string/title_proposed_walk"
        tools:layout="@layout/fragment_proposed_walk" />

    <fragment
        android:id="@+id/sendTeamRequestFragment"
...
