...
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:background="@null"
            android:text="✔"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/item_view_initials"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/item_view_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
